# mutablesecurity

./: .deepsource.toml  .gitignore  .snyk  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  README.pypi.md  pyproject.toml  whitelist.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  commit_template  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  improvement.yaml  question.yaml
.github/workflows/: api_call_graph.yaml  build-deb-file.yml  logos_to_webp.yaml  pytest_coveralls.yaml  readme_update.yaml  spec_sheets.yaml  website_trigger.yaml
mutablesecurity/: __init__.py  cli.py
mutablesecurity/autodoc/: __init__.py  badges.py  solution_spec_sheet.py  solutions_statuses_table.py
mutablesecurity/cli/: __init__.py  cli.py  feedback_form.py  messages.py  printer.py  solutions_manager_adapter.py
mutablesecurity/config/: __init__.py  config.py
mutablesecurity/helpers/: __init__.py  colors.py  data_type.py  exceptions.py  files.py  github.py  html.py  markdown.py  parsers.py  plain_yaml.py  pytest.py  python.py  type_hints.py  yaml_parser.py
mutablesecurity/leader/: __init__.py  connections.py  leader.py
mutablesecurity/logger/: __init__.py  logger.py
mutablesecurity/main/: __init__.py  deployments.py  main.py
mutablesecurity/modules/: exceptions.py
mutablesecurity/modules/helpers/: networking.py
mutablesecurity/modules/leader/: __init__.py  leader.py
mutablesecurity/modules/main/: main.py
mutablesecurity/modules/solutions_manager/: __init__.py  solution_manager.py
mutablesecurity/modules/solutions_manager/deployments/: managed_stats.py  managed_yaml_backed_config.py
mutablesecurity/modules/solutions_manager/files/teler/: teler.conf.j2
mutablesecurity/modules/solutions_manager/solutions/: __init__.py  _abstract.py  clamav.py  dummy.py  lets_encrypt.py  suricata.py  teler.py
mutablesecurity/modules/solutions_manager/solutions/suricata/: suricata-modify.conf  suricata-update.sh  suricata.conf.j2
mutablesecurity/monitoring/: __init__.py  data_collection.py  monitor.py
mutablesecurity/solutions/: __init__.py
mutablesecurity/solutions/base/: __init__.py  action.py  data_type.py  exception.py  information.py  log.py  object.py  result.py  solution.py  test.py
mutablesecurity/solutions/common/facts/: bash.py  files.py  networking.py  os.py  process.py  service.py
mutablesecurity/solutions/common/operations/: apt.py  crontab.py  files.py
mutablesecurity/solutions/implementations/clamav/: code.py  meta.yaml
mutablesecurity/solutions/implementations/dummy/: code.py  meta.yaml
mutablesecurity/solutions/implementations/duplicati/: code.py  meta.yaml
mutablesecurity/solutions/implementations/duplicati/files/: duplicati.conf.j2
mutablesecurity/solutions/implementations/fail2ban/: code.py  meta.yaml
mutablesecurity/solutions/implementations/fail2ban/files/: sshd.conf.j2
mutablesecurity/solutions/implementations/lets_encrypt/: code.py  meta.yaml
mutablesecurity/solutions/implementations/suricata/: _code.py  code.py  code.py.old  meta.yaml
mutablesecurity/solutions/implementations/suricata/files/: suricata.conf.j2  suricata.yaml  suricata.yaml.j2
mutablesecurity/solutions/implementations/teler/: code.py  meta.yaml
mutablesecurity/solutions/implementations/vector/: code.py  meta.yaml
mutablesecurity/solutions/implementations/wazuh_agent/: code.py  code.py.old  meta.yaml
mutablesecurity/solutions/implementations/wazuh_manager/: code.py  code.py.old  meta.yaml
mutablesecurity/solutions_manager/: __init__.py  filter.py  solution_manager.py  sorter.py  types.py
mutablesecurity/visual_proxy/: __init__.py  describer_facade.py  stringifier.py
others/api_call_graph_script/: generate.py
others/api_call_graph_script/exports/: call_graph
others/pyinfra_deployment_test_script/: enable_winrm.ps1  test_deployment.py
others/readme_generation_script/: README.template.md  generate.py
others/solutions_api_call_graph/: generate.py
others/solutions_api_call_graph/exports/: call_graph
others/spec_sheets_generation_script/: generate.py
others/spec_sheets_generation_script/exports/: clamav.md  fail2ban.md  lets_encrypt.md  solutions.json  suricata.md  teler.md  vector.md
src/: __init__.py  cli.py
src/cli/: __init__.py  cli.py  feedback_form.py  messages.py  printer.py
src/helpers/: exceptions.py  files.py  github.py  parsers.py  plain_yaml.py
src/leader/: __init__.py  connections.py  leader.py
src/logger/: __init__.py  logger.py
src/main/: __init__.py  deployments.py  main.py
src/modules/solutions_manager/: solution_manager.py
src/solutions/: __init__.py  base.py
src/solutions/base/: __init__.py  action.py  exception.py  information.py  log.py  requirement.py  solution.py  test.py
src/solutions/common/deployments/: crontab.py
src/solutions/common/facts/: networking.py
src/solutions/common/operations/: crontab.py
src/solutions/implementations/: __init__.py
src/solutions/implementations/lets_encrypt/: deployments.py  meta.yaml
src/solutions/implementations/suricata/: deployments.py  meta.yaml
src/solutions/implementations/teler/: deployments.py
src/solutions_manager/: __init__.py  solution_manager.py
src/solutions_manager/deployments/: managed_yaml_backed_config.py
src/solutions_manager/facts/: networking.py
src/solutions_manager/solutions/: __init__.py  _abstract.py  lets_encrypt.py  suricata.py
tests/: conftest.py  test_pytest.py
tests/cli/: test_cli.py  test_feedback_form.py  test_printer_and_messages.py
tests/config/: test_config.py
tests/helpers/: test_data_types.py  test_files.py  test_github.py  test_parsers.py  test_plain_yaml.py  test_python.py
tests/leader/: test_connections.py  test_leader.py
tests/logger/: test_logger.py
tests/monitoring/: data_collection.py
tests/solutions/: conftest.py  test_data_types.py  test_invalid_commands.py  test_managers.py  test_solution.py  test_valid_commands.py
tests/solutions_manager/: test_solutions_manager.py
(+7 files in other folders)
