[tool.poetry]
name = "mutablesecurity"
version = "0.2.0"
description = "Seamless deployment and management of cybersecurity solutions"
keywords = ["cybersecurity", "security-solutions", "hardening", "automatic-deployment"]
license = "MIT"
authors = [
    "MutableSecurity <hello@mutablesecurity.io>"
]
repository = "https://github.com/MutableSecurity/mutablesecurity"
homepage = "https://www.mutablesecurity.io"
readme = "README.pypi.md"
classifiers = [
    "Topic :: Security",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
    "Operating System :: OS Independent"
]
include = [
    "LICENSE",
]

[tool.poetry.urls]
"Changelog" = "https://github.com/MutableSecurity/mutablesecurity/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/MutableSecurity/mutablesecurity/issues"
"LinkedIn" = "https://www.linkedin.com/company/mutablesecurity"
"Twitter" = "https://twitter.com/mutablesecurity/"

[tool.poetry.dependencies]
Click = "^8.0"
humanfriendly = "^10.0"
packaging = "^21.3"
pyinfra = "^2.2"
pypattyrn = "^1.2"
python = "^3.9"
PyYAML = "6.0"
requests = "^2.27.1"
rich = "11.2.0"

[tool.poetry.scripts]
mutablesecurity = "mutablesecurity.cli:main"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
coverage = {extras = ["toml"], version = "^6.4.2"}
darglint = "^1.8.1"
flake8 = "^4.0.1"
flake8-annotations = "^2.9.0"
flake8-bandit = "^3.0.0"
flake8-docstrings = "^1.6.0"
flake8-quotes = "^3.3.1"
flake8-spellcheck = "^0.28.0"
flake8-tidy-imports = "^4.8.0"
graphviz = "^0.20"
isort = "^5.10.1"
mypy = "^0.961"
pep8-naming = "^0.13.0"
pyenchant = "^3.2.2"
pylint = "^2.13.5"
pyproject-flake8 = "^0.0.1-alpha.4"
pytest = "^7.1.2"
types-PyYAML = "^6.0.9"
types-requests = "^2.27.30"
flake8-print = "^5.0.0"

[tool.black]
line-length = 79
preview = true

[tool.flake8]
exclude = ".venv"
inline-quotes = "double"
extend-ignore = "ANN101,"
per-file-ignores = """
    # The __init__.py files only imports the modules defined in the package.
    ./**/__init__.py: F401

    # The banned module logging is used only here.
    ./mutablesecurity/logger/**: I251

    # Ease the integration process by not requesting documentation via
    # docstrings.
    ./mutablesecurity/solutions/implementations/**/code.py: D101, D102, D103, D106

    # Ease the creation of facts and operations by not requesting functions
    # documentations (only class)
    ./mutablesecurity/solutions/common/facts/**: D102
    ./mutablesecurity/solutions/common/operations/**: D103

    # All the pytest unit tests use asserts.
    ./tests/**: S101
    ./mutablesecurity/helpers/pytest.py: S101
"""
ban-relative-imports = true
banned-modules = """
    logging = Use the logging module instead.
"""
dictionaries = "en_US,python,technical"

[tools.isort]
line_length = 79
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party= ["src"]
known_local_folder = ["src"]

[tool.mypy]
python_version = "3.9"
show_error_codes = true

[tool.pylint.MASTER]
init-hook="import sys; sys.path.append('.')"

[tool.pylint.MESSAGES_CONTROL]
disable="missing-function-docstring"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src"
]

[tool.pylint.SPELLING]
spelling-dict = "en_US"
spelling-private-dict-file = "whitelist.txt"

[tool.coverage.run]
omit = [
    "mutablesecurity/solutions/implementations/*",
    "tests/*",
    "**/greenlet.py"
]